# gflip

src/: CMakeLists.txt
src/applications/: GFPLoopClosingTest.cpp  GenerateBoW.cpp  GenerateNN.cpp
src/gflip/: CMakeLists.txt  gflip_bow_generator.cpp  gflip_bow_generator.hpp  gflip_engine.cpp  gflip_engine.hpp  gflip_feature_extractor.cpp  gflip_feature_extractor.hpp  gflip_types.hpp
src/vocabulary/: CMakeLists.txt
